--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -22,17 +22,13 @@
   column-gap: 0.25rem;
 }
 
-.nav__toggle {
-  display: inline-flex;
-  font-size: 1.75rem;
-  cursor: pointer;
-}
-
 .nav__list {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 1.5rem;
+  flex-direction: row;
+  column-gap: 3rem;
+  /* flex-direction: column; */
+  /* align-items: center;
+  row-gap: 1.5rem; */
 }
 
 .nav__link {
@@ -53,9 +49,9 @@
   cursor: pointer;
 }
 
-.show-menu {
+/* .show-menu {
   top: 0;
-}
+} */
 
 .nav__btns {
   display: flex;
@@ -82,10 +78,10 @@
     margin-left: auto;
   }
 
-  .nav__list {
+  /* .nav__list {
     flex-direction: row;
     column-gap: 3rem;
-  }
+  } */
 }
 
 @media screen and (max-width: 767px) {
@@ -99,5 +95,24 @@
     border-radius: 0 0 1.5rem 1.5rem;
     box-shadow: 4px 4px 4px hsla(0, 0%, 0%, 0.507);
     transition: 0.4s;
+  }
+  .show-menu {
+    top: 0;
+  }
+  .nav__list {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1.5rem;
+  }
+  .nav__toggle {
+    display: inline-flex;
+    font-size: 1.75rem;
+    cursor: pointer;
+  }
+  .hide {
+    visibility: hidden;
+  }
+  .show {
+    visibility: visible;
   }
 }
