--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -85,3 +85,24 @@
     justify-content: space-evenly;
   }
 }
+
+@media screen and (max-width: 576px) {
+  .footer__item-social {
+    margin: 2rem;
+    width: 10%;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .footer__item-social {
+    margin: 2rem;
+    width: 8%;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .footer__item-social {
+    margin: 2rem;
+    width: 5%;
+  }
+}
